# StellarTrust

./: .gitignore  Architecture.md  Design.md  Memory.md  PRD.md  Phases.md  README.md  Rules.md  awsedrfgyhuji.md  devlopement.md  package-lock.json  package.json
.github/workflows/: ci.yml
ai/: .env.example  pyproject.toml
ai/app/: __init__.py  main.py
ai/app/engines/: __init__.py
ai/app/routers/: risk.py
ai/app/schemas/: __init__.py
ai/tests/: test_risk.py
api/: index.ts
backend/: .env.example  eslint.config.js  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
backend/api/: index.ts
backend/prisma/: schema.prisma  seed.ts
contracts/: Cargo.toml  README.md
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: dispute_then_release.1.json  double_release_fails.1.json  initialize_locks_funds.1.json  refund_pays_buyer.1.json  release_pays_seller_after_buyer_confirmation.1.json  release_without_buyer_confirmation_fails.1.json
contracts/rwa_token/: Cargo.toml
contracts/rwa_token/src/: lib.rs  test.rs
contracts/rwa_token/test_snapshots/test/: issuer_holds_all_units_initially.1.json  payout_share_is_pro_rata.1.json  transfer_to_investor.1.json
contracts/scripts/: deploy-testnet.ps1
docs/: Architecture.md  Memory.md  Phases.md  Rules.md  devlopement.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/: .env.example  README.md  docker-compose.yml
shared/: package-lock.json  package.json  tsconfig.json
(+123 files in other folders)
