[workspace]
resolver = "2"
members = ["escrow", "rwa_token"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "22.0.0"

# Optimize WASM output for on-chain deployment.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
